<resources>
    <string name="title_activity_base">BaseActivity</string>

    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_age">Age</string>
    <string name="hint_password">Password</string>
    <string name="text_sign_up">SIGN UP</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Sign Up Successful</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rs">UC</string>
    <string name="credit">Current balance</string>
    <string name="daily_bonus">Daily Bonus</string>
    <string name="spinner_bonus">Spinner Bonus</string>
    <string name="earn_money">Earn UC</string>
    <string name="invitation_link">Invite &amp; earn UC</string>
    <string name="adds_demo">Adds Demo</string>
    <string name="rotate">Rotate</string>
    <string name="sucess_msg">congratulations you have won rs</string>
    <string name="network_error_msg">Network connection is required for this to continue!</string>

    <string name="hint_verification_code">Verification Code</string>

    <string name="resend_phone_auth">Resend</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="status_code_sent">Code Sent</string>

    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="firebase_user_management">Firebase User Management</string>
    <string name="sign_up_title">Free Elite Royal Pass and Free UC for PUBG</string>

    <!--sign up-->
    <string name="sign_up_user_name">User Name</string>
    <string name="sign_up_mobile_number">Phone Number</string>
    <string name="sign_up">SignUp</string>
    <string name="sign_up_privacy_policy">Privacy Policy</string>
    <string name="ad_attribution">Ad</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="rate_us_header">Do you love this app..?</string>
    <string name="rate_us_title">Rating for me</string>
    <string name="free_uc_for_pubg">Free UC for Pubg</string>
    <string name="gmail_verification">GMail Verification</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_earn">You Earn</string>
    <string name="uc_count">%1$d UC</string>
    <string name="daily_bouns_error">Please comeback Tomorrow</string>
    <string name="sorry">Sorry</string>
    <string name="rate_us">Rate Us</string>
    <string name="how_it_work">How ir works</string>
    <string name="redeem">Redeem</string>
    <string name="back">Back</string>
    <!--\u20B9-->
    <string-array name="dummy">
        <item>0</item>
        <item>1 UC</item>
        <item>2 UC</item>
        <item>3 UC</item>
        <item>4 UC</item>
        <item>5 UC</item>
    </string-array>
</resources>
