<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="registration"
            type="com.example.myapplication.models.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/sign_up_bg_blue" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:fontFamily="@font/courgette_regular"
            android:gravity="center"
            android:text="@string/sign_up_title"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="32dp" />
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/loginbox"
            android:layout_width="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:padding="32dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingBottom="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:minHeight="50dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@drawable/sign_up_field_bg">
                <EditText
                    android:text="@={registration.name}"
                    android:id="@+id/etName"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:drawableStart="@drawable/username"
                    android:drawablePadding="10dp"
                    android:hint="@string/sign_up_user_name"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:minHeight="50dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@drawable/sign_up_field_bg">
                <EditText
                    android:text="@={registration.mobile}"
                    android:id="@+id/etEmail"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:drawableStart="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:inputType="phone"
                    android:hint="@string/sign_up_mobile_number"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:minHeight="50dp"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <CheckBox
                    android:id="@+id/privacy_click"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/privacy_text"
                    android:gravity="center|start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sign_up_privacy_policy"/>
            </LinearLayout>
            <!--<com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sign_up_field_bg"
                android:id="@+id/layoutName"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={registration.name}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etName"
                    android:hint="Name"/>
            </com.google.android.material.textfield.TextInputLayout>-->
            <!--<com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutEmail"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={registration.mobile}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etEmail"
                    android:inputType="phone"
                    android:hint="Mobile Number"/>
            </com.google.android.material.textfield.TextInputLayout>-->

            <Button
                android:layout_marginTop="8dp"
                android:text="@string/sign_up"
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:background="@drawable/sign_up_submit_bg">

            </Button>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textDirection="firstStrong"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>