<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="userModel"
            type="com.example.myapplication.models.UserViewModel" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/header"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragments.HomeFragment"
            android:background="@drawable/headerbg">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_margin="8dp"
                    android:text="Hello:"
                    android:textColor="@color/white"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_margin="8dp"
                    android:text="@={userModel.name}"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:id="@+id/name"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/score"
                    android:text="@={``+userModel.score}"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/rs"
                    android:layout_margin="8dp"
                    android:text="@string/rs"
                    android:textColor="@color/white"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:layout_toEndOf="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/text"
                    android:layout_margin="8dp"
                    android:text="@string/credit"
                    android:textColor="@color/white"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/sign_up_submit_bg"
                android:text="@string/redeem"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="32dp"/>
        </LinearLayout>
    </LinearLayout>
</layout>
