<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/body"
    >
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/sign_up_bg_blue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>
    <RelativeLayout
        android:padding="32dp"
        style="@style/authentication_content_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/loginbox"
        >

        <LinearLayout
            android:id="@+id/view_button_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="70dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_verification_code"
                android:layout_marginTop="11dp"
                android:id="@+id/textInputLayout1">
                <EditText
                    android:id="@+id/field_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:textColor="@color/gray"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/note"
                    style="@style/ThemeOverlay.MyTextDetail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    tools:text="Veriication Sucessfull"
                    android:textColor="#ffffff"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:padding="5dp"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2.0"
            android:layout_below="@+id/view_button_body"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp">

            <Button
                android:layout_marginEnd="4dp"
                android:id="@+id/button_verify_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/verify_phone_auth"
                style="@style/authentication_button_submit"/>

            <Button
                android:layout_marginStart="4dp"
                android:id="@+id/button_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/resend_phone_auth"
                style="@style/authentication_button_submit"/>
        </LinearLayout>
</RelativeLayout>

</FrameLayout>
